# pedestrian_detection_and_tracking

./: .gitignore  CMakeLists.txt  README.md  main.cpp
detect_and_track/: CMakeLists.txt  det_and_track.cpp  lk_tracker.cpp
pedestrian_detection/: CMakeLists.txt  object_detection.cpp  object_detection.h  ssdperson10695.param  test.cpp
